Adjust button colours for dark mode; Fix sun-svg colour

--- a/styles/dark-mode-style.css
+++ b/styles/dark-mode-style.css
@@ -9,6 +9,19 @@
     color: #252135;
 }
 
+.dark-mode button {
+    color: #252135;
+    background-color: #C4A7E6;
+    border-color: #DFDDF4;
+}
+
+.dark-mode button:focus-visible {
+    /* paint a 2px white pseudo-outline using box-shadow */
+    box-shadow: 0 0 0 2px #000000;
+    /* then paint a 2px dark pink outline and offset it to reveal one or two pixels of the pseudo-outline */
+    outline: solid 2px rgb(232, 220, 113);
+}
+
 .dark-mode #moi {
     border-color: #EB9A97;
 }
